syntax = "proto3";

package cart;

option go_package = "gen/";

message UserRequest {
    int32 user_id = 1;
}

message CartItem {
    int32 id = 1;
    int32 user_id = 2;
    int32 product_id = 3;
    int32 quantity = 4;
}

message CartItemList {
    repeated CartItem items = 1;
}

service CartService {
    rpc GetCartItems(UserRequest) returns (CartItemList);
}